Closed Bug 1633644 Opened 4 years ago Closed 4 years ago

Assertion when PPDC is enabled

Categories

(Core :: Networking, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: jya, Assigned: jya)

Details

Attachments

(2 files)

https://treeherder.mozilla.org/logviewer.html#?job_id=299556384&repo=try

Following changed to the DocumentLoadListener, when the load is cancelled mid-air; we can call back into the ADocumentChannelBridge::DisconnectChildListeners which will clear ParentProcessDocumentChannel::mDocumentLoadListener.

This cause an assertion failure

For now, let's just get around this case, a better solution would be to rework how the DocumentLoadListener calls back into the ADocumentChannelBridge

Attachment #9143869 - Attachment description: Bug 1633644 - Handle case where the DocumentChannel got cancelled mid-air. r?mattwoodrow → Bug 1633644 - P1. Handle case where the DocumentChannel got cancelled mid-air. r?mattwoodrow
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f61aa96e84f5
P1. Handle case where the DocumentChannel got cancelled mid-air. r=mattwoodrow
https://hg.mozilla.org/integration/autoland/rev/6e69838359fc
P2. Do not call RedirectToRealChannel if the channel got cancelled. r=mattwoodrow.
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Regressions: 1634339
No longer regressions: 1634339
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: