Bug 1633644 - P1. Handle case where the DocumentChannel got cancelled mid-air. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D72795